--- a/notebooks/02_data_cleaning_feature_engineering.ipynb
+++ b/notebooks/02_data_cleaning_feature_engineering.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "5ab7705a-7ae0-44a0-b7c5-e0caee4cddbe",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -193,9 +191,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "647e5479-33c8-4715-9cc6-23209477eac1",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -377,9 +373,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "4024a4c6-4dd2-45f4-a092-1c3fab667b13",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -647,9 +641,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "92eb1748-f8d9-4ec3-b5fe-f4ff21b80654",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -894,9 +886,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "9704b046-6b53-4f6c-846f-b66669fc06a7",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -977,7 +967,7 @@
     "- Temperature extremes → driver fatigue, vehicle issues\n",
     "\n",
     "Data Source Strategy:\n",
-    "11 years of historical data (2012-2023), I'll create weather-proxy features based on:\n",
+    "11 years of historical data (2012-2023), I created weather-proxy features based on:\n",
     "\n",
     "1. Season (rainy vs dry season in Nairobi)\n",
     "2. Time-of-day visibility (daylight vs darkness)\n",
@@ -1146,9 +1136,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "59b2df58-d977-4f86-9ab4-3daf2a428f9f",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1481,9 +1469,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "c0c5c997-af43-4571-95c5-0e131959ebeb",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
