Update README link and fix app configuration

--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "23ef4c14-9eb9-465e-98fa-cf4a902daa2c",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
     "NOTEBOOK 01: DATA EXPLORATION\n",
     "\n",
     "Purpose: Comprehensive exploratory analysis of Ma3Route Nairobi crash dataset\n",
-    "         to understand patterns, quality, and suitability for binary severity prediction\n",
+    "        to understand patterns, quality, and suitability for binary severity prediction\n",
     "\n",
     "Author: Mary Wangoi Mwangi (122174)\n",
     "Supervisor: Prof. Vincent Omwenga\n",
@@ -1150,7 +1150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.12.9)",
    "language": "python",
    "name": "python3"
   },
